testsuite/tests/rep-poly/T17360.stderr

T17360.hs:11:5: error:
    A representation-polymorphic type is not allowed here:
      Type: Id a
      Kind: TYPE r
    In the type of binder ‘x’
